--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-location": "~8.1.0",
     "expo-permissions": "~8.1.0",
     "formik": "2.1.4",
+    "jwt-decode": "^2.2.0",
     "lottie-react-native": "~2.6.1",
     "moment": "^2.26.0",
     "react": "~16.9.0",
@@ -34,7 +35,8 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
-    "yup": "^0.28.5"
+    "yup": "^0.28.5",
+    "expo-secure-store": "~8.1.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
